# mesh_tools_py

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  bunny_rough_binary.STL  clean.sh  install_essentials.sh  test.sh
src/: CMakeLists.txt  mesh_slicer.cpp  mesh_slicer.h
test/: CMakeLists.txt  compare.py  mslice.py  test.cpp  test.py
